# daily-ai-agent

./: .cursorrules  .env.example  .env.local.example  .gitignore  AI_AGENT_STRATEGY.md  CHANGELOG.md  CLAUDE.md  PRODUCTION_DEPLOYMENT.md  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: test-agent-memory.yml
scripts/: pre-push  setup-hooks.sh
src/daily_ai_agent/: __init__.py  api.py  api_server.py  main.py
src/daily_ai_agent/agent/: __init__.py  orchestrator.py  tools.py
src/daily_ai_agent/models/: __init__.py  config.py
src/daily_ai_agent/services/: llm.py  mcp_client.py  memory.py
src/daily_ai_agent/utils/: __init__.py  async_helpers.py  constants.py  error_handlers.py
tests/: __init__.py  conftest.py  test_agent_memory.py  test_api.py  test_mcp_client.py  test_tools.py  test_utils.py
